--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -4,13 +4,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 50vw;
-  overflow: hidden;
+  height: 100vh;
+  
 }
 
-.header-image-3 {
-  width: 70%;
-  height: auto;
-}
+
 
 
